fix text-align

--- a/docs/static/css/ws-server-plate.css
+++ b/docs/static/css/ws-server-plate.css
@@ -14,6 +14,7 @@
     font-size: 16px;
     color: #ffffff;
     cursor: default;
+    text-align: left;
 }
 
 .ws-server-plate-icon {
